# lowem1-experiments-n-notes

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cc_news/: docs.ipynb
cc_news_gen_aug/: analyze.ipynb  generate.ipynb
mimic_mockdocs/: README.md
mimic_mockdocs/scripts/: mimic_urls.txt
ocr2ocr/: ocr2ocr.ipynb
research/cc_news/: README.md
research/mockdocs/: README.md  summaries.ipynb
research/mockdocs/scripts/: offload
research/ocr2ocr/: README.md  ocr2ocr.ipynb  pyproject.toml
