[tool.poetry]
name = "ocr2ocr"
version = "0.1.0"
description = ""
authors = ["Michael Lowe <mlowe2020@fau.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {extras = ["torch"], version = "^4.31.0"}
datasets = "^2.14.4"
torch = "^2.0.1"
pyocr = "^0.8.3"
pandas = "^2.0.3"
numpy = "^1.25.2"
nlpaug = "^1.1.11"
tqdm = "^4.66.1"
huggingface-hub = "^0.16.4"
pytesseract = "^0.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
